--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,8 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.beyka.tiffbitmapfactory">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <application>
-
-    </application>
+    <application />
 
 </manifest>
